Final Website for Lesson 3

--- a/Lesson3_Assignment/index.html
+++ b/Lesson3_Assignment/index.html
@@ -73,7 +73,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 2 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Sarah Wolfe</h3>
             </div>
         </div>
     </header>
@@ -85,33 +85,33 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://git-scm.com/figures/18333fig0102-tn.png">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">What is Version Control?</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version control is a safety net.  It is all about change and change over time.  With version control you can go and recall files before they were modified as well as after modifications.  Version control is very helpful for web designers in case they make mistakes or need to go back and change something.  You can also see what might be causing a problem for your webpage and who caused it in the first place.  </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="https://www.atlassian.com/wac/landing/git/tutorial/git-basics/pageSections/00/contentFullWidth/0/tabs/03/pageSections/01/contentFullWidth/00/imageBinary/git-tutorial-basics-add-addsnapshot.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">How Does Git Work?</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git plays its role by taking snapshots of what your files look like.  Every time you type the git commit command, a snapshot is taken and stored.  This is also important for web designing because you can go back and view the snapshots and see what is changed.  If nothing has changed and git commit is typed in, git won’t store another copy but just keep the original.  Git is good for storing files because those usually will not get lost compared to using other VCS systems.  There are three stages of git.  There is committed, modified, and staged.  Committed means the data is stored, modified means you are working on the file but have got typed git commit yet, and staged is when you have yet to modify the file.  </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://www.markus-gattol.name/misc/mm/si/content/git_git_add.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Repositories</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">A repository is where all the files that have been changed are stored so you can go back and retrieve them.  The repository is where all the commit objects go.  When you type git commit the files are sent to the repository.  We created repositories on GitHub that we can go back and retrieve our files to see what we have changed and where we may have made a mistake.  </p>
         </div>
 
         <hr class="featurette-divider">
